--- a/pokedex/src/pages/styles/Home.css
+++ b/pokedex/src/pages/styles/Home.css
@@ -19,3 +19,31 @@
         transform: rotate(-10deg);
     }
 }
+
+.pokemonsContainer {
+    width: 100%;
+    height: 430px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.pagination {
+    display: inline-block;
+}
+
+.pagination button {
+    border: none;
+    outline: none;
+    padding: 10px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+    margin-top: 30px;
+    margin-left: 10px;
+}
+
+button:hover {
+    background-color: #FFD700;
+    color: white;
+}
