--- a/pokedex/src/components/PokemonCard/PokemonCard.css
+++ b/pokedex/src/components/PokemonCard/PokemonCard.css
@@ -7,4 +7,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #2F4F4F;
+    color:#A9A9A9;
 }
