--- a/pokedex/src/pages/styles/Home.css
+++ b/pokedex/src/pages/styles/Home.css
@@ -39,11 +39,26 @@
     padding: 10px 16px;
     background-color: #f1f1f1;
     cursor: pointer;
-    margin-top: 30px;
+    margin-top: 15px;
     margin-left: 10px;
 }
 
 button:hover {
     background-color: #FFD700;
     color: white;
+}
+
+.containerInfo {
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.containerInfo img {
+    margin-left: 10px;
+}
+
+body {
+    background: #A9A9A9;
 }
