--- a/pokedex/src/pages/styles/Home.css
+++ b/pokedex/src/pages/styles/Home.css
@@ -62,3 +62,9 @@ button:hover {
 body {
     background: #A9A9A9;
 }
+
+.pokemonInfo {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
